web-infras/parser/tests/fixtures/babel/es2022/class-static-block/invalid-break/output.txt
[SyntaxError]: unlabeled break must be inside loop or switch. (6,9)
6|        break;
 |       ^
